--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "msgist-dc"
-version = "1.4.1"
+version = "1.4.3"
 
 authors = ["Itsusinn <itsusinn@foxmail.com>"]
 edition = "2021"
@@ -16,14 +16,12 @@ no-color = ["colored/no-color"]
 color = ["tracing-subscriber/ansi"]
 
 [dependencies]
-serenity = { branch = "ws-proxy", git = "https://github.com/Itsusinn/serenity.git"}
-
-# serenity = { path = "/home/itsusinn/Workspace/Clone/serenity" }
+serenity = "0.12.0"
 
 # logging
-tracing= "0.1.37"
-tracing-subscriber = { version = "0.3.16", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
-colored = "2.0.0"
+tracing= "0.1.40"
+tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
+colored = "2.1.0"
 
 # asynchronous
 futures-util = "0.3.25"
@@ -36,42 +34,43 @@ uuid = "1.2.2"
 url = "2.3.1"
 once_cell = "1.17.0"
 dashmap = { version = "5.4.0", features = ["serde"] }
-educe = { version = "0.4.20", default-features = false, features = ["Default"] }
+educe = { version = "0.5.11", default-features = false, features = ["Default"] }
 arcstr = { version = "1.1.5", features = ["serde"] }
 either = "1.8.0"
-infer = "0.12.0"
+infer = "0.15.0"
 yaml-rust = "0.4.5"
 linked-hash-map = "0.5.6"
-time = { version = "0.3.17", features = ["macros", "local-offset"] }
+time = { version = "0.3.31", features = ["macros", "local-offset"] }
 chrono = "0.4.23"
 
 # error handling
-thiserror = "1.0.38"
+thiserror = "1.0.56"
 color-eyre = "0.6.2"
 
 # encoding and decoding
-base64-url = "1.4.13"
+base64-url = "2.0.2"
 
 # serialization
-serde = { version = "1.0.152", features = ["derive","rc"] }
-serde_json = "1.0.91"
-serde_yaml = "0.9.16"
-ciborium = "0.2.0"
+serde = { version = "1.0.195", features = ["derive","rc"] }
+serde_json = "1.0.111"
+serde_yaml = "0.9.30"
+ciborium = "0.2.1"
 
 # mesagisto
 mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
 #mesagisto-client = { path = "../../mesagisto-client/rust" }
-automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
-#automatic-config = { path = "/code/automatic-config-rs" }
+
 singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git" }
 # singleton = { path = "/code/singleton-rs" }
 lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
-self_update = { branch = "proxy", git = "https://github.com/Itsusinn/self_update.git", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }
+self_update = { version = "0.39.0", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }
+figment-wrapper = { branch = "master", git = "https://github.com/Itsusinn/figment-wrapper.git" }
+figment = { version = "0.10.14", features = ["yaml"] }
 
 # i18n
-i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]}
-i18n-embed-fl = "0.6.4"
-rust-embed = "6.4.2"
+i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"]}
+i18n-embed-fl = "0.7.0"
+rust-embed = "8.2.0"
 locale_config = "0.3.0"
 
 
